# First_Programing_language

./: .gitignore  CMakeLists.txt  inspect.apl  inspect.apx
Final_Functions/: CMakeLists.txt  Final_Functions.cpp  Final_Functions.h
Lexer/: CMakeLists.txt  Lexer.h  Source_Lexer.cpp  Source_Lexer.h  Token_Collection.cpp  Token_Collection.h
Main/: CMakeLists.txt  Main.cpp
Objects/: CMakeLists.txt  Complilation_Object.cpp  Complilation_Object.h  Conditional_Object.cpp  Conditional_Object.h  Declarations_Object.cpp  Declarations_Object.h  Include_Object.cpp  Include_Object.h  Inspect_Object.cpp  Inspect_Object.h  Return_Object.cpp  Return_Object.h  Variable_Object.cpp  Variable_Object.h
Objects/Composites/: CMakeLists.txt  Scope_Object.cpp  Scope_Object.h
Objects/Dependent/: CMakeLists.txt  Function_Argument.cpp  Function_Argument.h  Operator_Object.cpp  Operator_Object.h  Type_Object.cpp  Type_Object.h  Variable_Essence.cpp  Variable_Essence.h
Objects/Inspect_Conditionals/: As_Conditional_Object.cpp  As_Conditional_Object.h  CMakeLists.txt  Inspect_Conditional_Object.cpp  Inspect_Conditional_Object.h  Is_Conditional_Object.cpp  Is_Conditional_Object.h
Objects/Inspect_Conditionals/Inspect_Is_Conditionals/: CMakeLists.txt  Compare_Conditional_Object.cpp  Compare_Conditional_Object.h  Default_Conditional_Object.cpp  Default_Conditional_Object.h  In_Conditional_Object.cpp  In_Conditional_Object.h  Inspect_Is_Conditional_Object.cpp  Inspect_Is_Conditional_Object.h
Objects/Operatives/: CMakeLists.txt  Function_Call_Object.cpp  Function_Call_Object.h  In_Set_Object.cpp  In_Set_Object.h  Operation_Object.cpp  Operation_Object.h  Operative_Object.cpp  Operative_Object.h  Variable_Call_Object.cpp  Variable_Call_Object.h
Objects/Operatives/Constanses/: CMakeLists.txt  Char_Object.cpp  Char_Object.h  Constans_Object.cpp  Constans_Object.h  Float_Object.cpp  Float_Object.h  Int_Object.cpp  Int_Object.h  String_Object.cpp  String_Object.h
Objects/Scopeds/: CMakeLists.txt  Else_Object.cpp  Else_Object.h  Function_Object.cpp  Function_Object.h  If_Object.cpp  If_Object.h  Inspect_Option_Object.cpp  Inspect_Option_Object.h  Scoped_Object.cpp  Scoped_Object.h  While_Object.cpp  While_Object.h
Objects/Sets/: CMakeLists.txt  Colection_Object.cpp  Colection_Object.h  Set_Object.cpp  Set_Object.h  Zone_Object.cpp  Zone_Object.h
Parser/: CMakeLists.txt  Objects_Tree.cpp  Objects_Tree.h  Parser.cpp  Parser.h  Real_Parser.cpp  Real_Parser.h
Runner/: As_converters.cpp  As_converters.h  CMakeLists.txt  Executor.cpp  Executor.h  Library_Functions.cpp  Library_Functions.h  Operations.cpp  Operations.h  Runner.cpp  Runner.h  Splited_Line.cpp  Splited_Line.h  Structured_Operations.cpp  Structured_Operations.h
Tests/: CMakeLists.txt
Tests/Compile_Tests/: CMakeLists.txt
Tests/Compile_Tests/Compile Delta/: CMakeLists.txt  Delta.cpp
Tests/Compile_Tests/Compile Hello World/: CMakeLists.txt  Hello_World.cpp
Tests/Compile_Tests/Compile Pattern/: CMakeLists.txt  Pattern.cpp
Tests/Compile_Tests/Compile Power/: CMakeLists.txt  Power.cpp
Tests/Compile_Tests/Compile Trygonometry/: CMakeLists.txt  Trygonometry.cpp
Tests/Execution_Tests/: CMakeLists.txt
Tests/Execution_Tests/Execute Delta/: CMakeLists.txt  Delta.cpp
Tests/Execution_Tests/Execute Hello World/: CMakeLists.txt  Hello_World.cpp
Tests/Execution_Tests/Execute Pattern/: CMakeLists.txt  Pattern.cpp
Tests/Execution_Tests/Execute Power/: CMakeLists.txt  Power.cpp
Tests/Execution_Tests/Execute Trygonometry/: CMakeLists.txt  Trygonometry.cpp
Tests/Executor_Tests/: CMakeLists.txt
Tests/Executor_Tests/Execute_Call/: CMakeLists.txt  Execute_Call.cpp
Tests/Executor_Tests/Execute_Colection/: CMakeLists.txt  Execute_Colection.cpp
Tests/Executor_Tests/Execute_Colection_2/: CMakeLists.txt  Execute_Colection_2.cpp
Tests/Executor_Tests/Execute_Declaration/: CMakeLists.txt  Execute_Declaration.cpp
Tests/Executor_Tests/Execute_Function/: CMakeLists.txt  Execute_Function.cpp
Tests/Executor_Tests/Execute_If/: CMakeLists.txt  Execute_If.cpp
Tests/Executor_Tests/Execute_If_2/: CMakeLists.txt  Execute_If_2.cpp
Tests/Executor_Tests/Execute_If_3/: CMakeLists.txt  Execute_If_3.cpp
Tests/Executor_Tests/Execute_Inspect/: CMakeLists.txt  Execute_Inspect.cpp
Tests/Executor_Tests/Execute_Inspect_2/: CMakeLists.txt  Execute_Inspect_2.cpp
Tests/Executor_Tests/Execute_Inspect_3/: CMakeLists.txt  Execute_Inspect_3.cpp
Tests/Executor_Tests/Execute_Inspect_4/: CMakeLists.txt  Execute_Inspect_4.cpp
Tests/Executor_Tests/Execute_Inspect_5/: CMakeLists.txt  Execute_Inspect_5.cpp
Tests/Executor_Tests/Execute_Operation/: CMakeLists.txt  Execute_Operation.cpp
Tests/Executor_Tests/Execute_Recursion/: CMakeLists.txt  Execute_Recursion.cpp
Tests/Executor_Tests/Execute_While/: CMakeLists.txt  Execute_While.cpp
Tests/Executor_Tests/Execute_Zone/: CMakeLists.txt  Execute_Zone.cpp
Tests/Executor_Tests/Execute_Zone_2/: CMakeLists.txt  Execute_Zone_2.cpp
Tests/Executor_Tests/Execute_Zone_3/: CMakeLists.txt  Execute_Zone_3.cpp
Tests/Executor_Tests/Execute_Zone_4/: CMakeLists.txt  Execute_Zone_4.cpp
Tests/Executor_Tests/Execute_Zone_5/: CMakeLists.txt  Execute_Zone_5.cpp
Tests/Lexer_Parser/: CMakeLists.txt
Tests/Lexer_Parser/Parse Delta/: CMakeLists.txt  Delta.cpp
Tests/Lexer_Parser/Parse Hello World/: CMakeLists.txt  Hello_World.cpp
Tests/Lexer_Parser/Parse Pattern/: CMakeLists.txt  Pattern.cpp
Tests/Lexer_Parser/Parse Power/: CMakeLists.txt  Power.cpp
Tests/Lexer_Tests/: CMakeLists.txt
Tests/Lexer_Tests/char/: CMakeLists.txt  (+1 more)
Tests/Parser_Tests/: CMakeLists.txt
Tests/Run_Tests/: CMakeLists.txt
Tests/Runner_Tests/: CMakeLists.txt
Tests/Source_Lexer/: CMakeLists.txt
Tests/Validator_Tests/: CMakeLists.txt
Validator/: CMakeLists.txt  Located_Function_Essence.cpp  Located_Function_Essence.h  Located_Variable_Essence.cpp  Located_Variable_Essence.h  Real_Validator.cpp  Real_Validator.h  Validated_Objects_Tree.cpp  Validated_Objects_Tree.h  Validator.cpp  Validator.h
Visitor/: CMakeLists.txt  Visitor.h
(+278 files in other folders)
