cmake_minimum_required (VERSION 3.8)

add_subdirectory("Execute_Declaration")
add_subdirectory("Execute_Call")
add_subdirectory("Execute_Function")
add_subdirectory("Execute_Zone")
add_subdirectory("Execute_Zone_2")
add_subdirectory("Execute_Zone_3")
add_subdirectory("Execute_Zone_4")
add_subdirectory("Execute_Zone_5")
add_subdirectory("Execute_Colection")
add_subdirectory("Execute_Colection_2")
add_subdirectory("Execute_If")
add_subdirectory("Execute_If_2")
add_subdirectory("Execute_If_3")
add_subdirectory("Execute_While")
add_subdirectory("Execute_Inspect")
add_subdirectory("Execute_Inspect_2")
add_subdirectory("Execute_Inspect_3")
add_subdirectory("Execute_Inspect_4")
add_subdirectory("Execute_Inspect_5")
add_subdirectory("Execute_Recursion")
