cmake_minimum_required (VERSION 3.8)


add_subdirectory("Include_Test")
add_subdirectory("Invalid_Include")
add_subdirectory("Invalid_Include_2")
add_subdirectory("Auto_Test")
add_subdirectory("Invalid_Auto")
add_subdirectory("Invalid_Auto_2")
add_subdirectory("String_Var_Test")
add_subdirectory("Float_Test")
add_subdirectory("Int_Function_Test")
add_subdirectory("Void_Function_Test")
add_subdirectory("Invalid_Void")
add_subdirectory("Invalid_Void_2")
add_subdirectory("Invalid_Void_3")
add_subdirectory("Invalid_Void_4")
add_subdirectory("Invalid_Void_5")

add_subdirectory("In_Scope_Int_Test")
add_subdirectory("In_Set_Test")
add_subdirectory("Operation_Test")
add_subdirectory("If_Test")
add_subdirectory("Conditional_Test")
add_subdirectory("Conditional_Test_2")
add_subdirectory("While_Test")
add_subdirectory("Inspect_Test")
add_subdirectory("Return_Test")
add_subdirectory("Colection_Test")
add_subdirectory("Zone_Test")
add_subdirectory("Is_Test")
add_subdirectory("Is_Test_2")
add_subdirectory("Is_Test_3")
add_subdirectory("As_Test")
add_subdirectory("Const_String_Test")
add_subdirectory("Const_Char_Test")
add_subdirectory("Const_Int_Test")
add_subdirectory("Const_Float_Test")
add_subdirectory("Next_Variable")
add_subdirectory("Call_Variable")
add_subdirectory("Call_Function")
add_subdirectory("Scope_Test")
add_subdirectory("Inspect_Option_Test")
add_subdirectory("Bracket_and_operative")
add_subdirectory("Bracket_and_operative_2")
add_subdirectory("Arguments_Test")