cmake_minimum_required (VERSION 3.8)

add_subdirectory("Run_Call")
add_subdirectory("Run_Operation")
#add_subdirectory("Run_Function")
add_subdirectory("Run_If")
add_subdirectory("Run_If_2")
add_subdirectory("Run_If_3")
add_subdirectory("Run_While")
add_subdirectory("Run_Collection")
add_subdirectory("Run_Collection_2")
add_subdirectory("Run_Zone")
add_subdirectory("Run_Zone_2")
add_subdirectory("Run_Zone_3")
add_subdirectory("Run_Zone_4")
add_subdirectory("Run_Zone_5")
add_subdirectory("Run_As")
#add_subdirectory("Run_As_2")
add_subdirectory("Run_Is")
add_subdirectory("Run_Is_2")
add_subdirectory("Run_Is_Compare")
add_subdirectory("Run_Is_Compare_2")
add_subdirectory("Run_Is_In")
add_subdirectory("Run_Is_In_2")
add_subdirectory("Run_Is_In_3")
#add_subdirectory("Run_Inspect")