cmake_minimum_required (VERSION 3.8)

add_subdirectory("Include_Lib")
add_subdirectory("Include_Own")
add_subdirectory("Variable")
add_subdirectory("Duplicated_Variable")
add_subdirectory("Declaration")
add_subdirectory("Bad_Initialisator")
add_subdirectory("Function")
add_subdirectory("Function_Overload")
add_subdirectory("Function_Duplicate")
add_subdirectory("Variable_Call")
add_subdirectory("Not_Existing_Var_Call")
add_subdirectory("Function_Call")
add_subdirectory("Not_Existing_Fun_Call")
add_subdirectory("Invalid_Argument")
add_subdirectory("Colection")
add_subdirectory("Zone")
add_subdirectory("Bad_Colection")
add_subdirectory("Bad_Zone")
add_subdirectory("Return")
add_subdirectory("As_Conditional")
add_subdirectory("Collide_As")
add_subdirectory("Compare_Conditional")
add_subdirectory("Bad_Compare")
add_subdirectory("In_Set")
add_subdirectory("Bad_In_Set")
add_subdirectory("Operation")
add_subdirectory("Mismatch_Operatives_Types")
add_subdirectory("Invalid_Operation")
add_subdirectory("Invalid_Assign")